--- a/index.html
+++ b/index.html
@@ -1,48 +1,59 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Civ-like Iso Starter</title>
-    <style>
-      body {
-        margin: 0;
-        padding: 0;
-        background-color: #111;
-        color: #eee;
-        font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
-          Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji',
-          'Segoe UI Symbol';
-      }
-      #root {
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100vw;
-        height: 100vh;
-        pointer-events: none; /* Let clicks pass through to the canvas */
-      }
-      #root > * {
-        pointer-events: all; /* But allow interaction with UI elements */
-      }
-      #game-container {
-        width: 100vw;
-        height: 100vh;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-      }
-      canvas {
-        display: block;
-        image-rendering: auto; /* Use smooth rendering for non-pixel art */
-        image-rendering: -webkit-optimize-contrast; /* Fallback for older browsers */
-      }
-    </style>
-  </head>
-  <body>
-    <div id="game-container"></div>
-    <div id="root"></div>
-    <script type="module" src="./src/main.ts"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>PolyEmpire</title>
+  <style>
+    body {
+      margin: 0;
+      padding: 0;
+      background-color: #111;
+      color: #eee;
+      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
+        Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji',
+        'Segoe UI Symbol';
+    }
+
+    #root {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100vw;
+      height: 100vh;
+      pointer-events: none;
+      /* Let clicks pass through to the canvas */
+    }
+
+    #root>* {
+      pointer-events: all;
+      /* But allow interaction with UI elements */
+    }
+
+    #game-container {
+      width: 100vw;
+      height: 100vh;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+
+    canvas {
+      display: block;
+      image-rendering: auto;
+      /* Use smooth rendering for non-pixel art */
+      image-rendering: -webkit-optimize-contrast;
+      /* Fallback for older browsers */
+    }
+  </style>
+</head>
+
+<body>
+  <div id="game-container"></div>
+  <div id="root"></div>
+  <script type="module" src="./src/main.ts"></script>
+</body>
+
 </html>
